# cloud

./: .bash_history  .dockerignore  .env.example  .gitconfig  .gitignore  .pre-commit-config.yaml  .viminfo  ADMIN_CONSOLE_SUMMARY.md  ADMIN_SETUP.md  COMPREHENSIVE_TEST_REPORT.md  CUSTOMER_PORTAL_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ESSENTIAL_SECURITY_FEATURES.md  FRONTEND_ADMIN_FIX.md  HTTPS_DEPLOYMENT_GUIDE.md  HTTPS_SETUP.md  HTTPS_TEST_SUMMARY.md  MESSS_FRAMEWORK.md  Makefile  README.md  SECURITY_IMPLEMENTATION_GUIDE.md  SSL_SETUP_GUIDE.md  TESTING_SUMMARY.md  TEST_RESULTS.md  VPS_DEPLOYMENT.md  VPS_DEPLOYMENT_INSTRUCTIONS.md  VPS_DEPLOYMENT_READINESS.md  WORKSPACE.md  add_hosts_entries.ps1  admin_test_results.json  api_token.env  api_token_config.json  check_db.py  clear_and_create_admin.sh  clear_demo_data.sh  complete_vps_setup.sh  continue_deployment.sh  create_admin_user.py  create_admin_via_api.py  (+71 more)
.devcontainer/: devcontainer.json
.docker/: .token_seed
.docker/buildx/: .buildNodeID
.github/workflows/: ci.yml
.npm/_npx/2f7e7bff16d1c534/: package-lock.json
.ssh/: authorized_keys  authorized_keys.bak  id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
app/: __init__.py  health_check.py  main.py  seed_data.py  worker.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py
app/core/: __init__.py  config.py  rbac.py  redis.py  security.py
app/db/: __init__.py  session.py
app/models/: __init__.py  audit.py  device.py  mqtt.py  sensor.py  tenant.py  user.py
app/repositories/: admin.py
app/schemas/: admin.py
app/services/: __init__.py  admin.py  auth.py
app/utils/: __init__.py  security.py
backend/: requirements.txt
backend/alembic/versions/: 3929a63c9eae_create_metrics_table.py
backend/alembic_backup/: env.py
backend/app/: db.py  main.py  models.py
backend/app/routes/: log.py  metrics.py
cloud/: docker-compose.yml  docker-compose.yml.bak
cloud-mini/: logs.db  main.py  models.py
cloud/traefik/: traefik.yml
common/: __init__.py  models.py  utils.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
dashboard/admin-dashboard/: Dockerfile  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.js
dashboard/admin-dashboard/src/: App.vue  main.js
dashboard/src/: App.jsx
dashboard/src/components/: StatsCounter.vue
dashboard/src/views/: Dashboard.vue
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEV_SETUP.md  MESS_GUIDELINES.md  ROADMAP.md  SECURITY.md  STYLE_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: Devices.vue  LoginForm.vue
frontend_admin/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend_admin/src/: App.vue  main.js  style.css
frontend_admin/src/router/: index.js
frontend_admin/src/stores/: auth.js
frontend_admin/src/views/: AuditView.vue  Dashboard.vue  DevicesView.vue  HealthView.vue  LoginView.vue  SettingsView.vue  TenantsView.vue  UsersView.vue
frontend_cloud/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend_cloud/src/: App.vue  style.css
frontend_cloud/src/router/: index.js
frontend_cloud/src/stores/: auth.js  devices.js  sensor.js
frontend_cloud/src/views/: Devices.vue  History.vue  Live.vue  LoginView.vue  Overview.vue  Profile.vue  Support.vue
infra/: .env  docker-compose.yml
infra/services/api/: Dockerfile  main.py
infra/services/auth-api/: .env  Dockerfile  requirements.txt
infra/services/backend/: Dockerfile
infra/services/bridge/: Dockerfile  app.py  requirements.txt
infra/services/ws/: Dockerfile  requirements.txt
infra/traefik/: acme.json  spa-fallback.yml  traefik.yml
infra/traefik/nginx/: dashboard.conf
nginx/: Dockerfile  frontend.conf
nginx/conf.d/: cloud-http-only.conf  cloud.conf  health.conf
scripts/: deploy.sh
services/api/: requirements.txt
services/api/app/: main.py
services/auth-api/: .env.example  Dockerfile  README.md  alembic.ini  database.py  dependencies.py  entrypoint.sh  env.example  main.py  models.py  pyproject.toml  schemas.py  security.py
services/auth-api/alembic/: env.py
services/auth-api/alembic/versions/: 0001_create_base_schema.py
services/auth-api/app/: main.py
services/auth-api/app/api/: routes.py
services/auth-api/app/core/: config.py
services/auth-api/app/db/: session.py
services/auth-api/routers/: auth.py  users.py
services/auth-api/tests/: test_auth.py  test_health.py  test_users.py
services/billing-api/: .env.example  README.md  pyproject.toml
services/billing-api/app/: main.py
services/billing-api/app/api/: routes.py
services/billing-api/app/core/: config.py
services/db/: .env.example  seed.sql
services/device-api/: Dockerfile  README.md  env.example  pyproject.toml
services/device-api/app/: main.py
services/device-api/app/api/: routes.py
services/device-api/app/db/: session.py
services/device-api/app/models/: stream.py
services/device-api/app/routes/: stream.py
services/device-api/tests/: test_stream.py
services/gateway/: .env.example  Dockerfile  README.md  pyproject.toml
services/gateway/app/: main.py
services/gateway/app/core/: config.py
services/gateway/app/ws/: stream.py
services/gateway/tests/: test_health.py  test_ws.py
services/media-proxy/: Dockerfile  README.md  package.json  tsconfig.json
services/metrics-api/: .env.example  Dockerfile  README.md  pyproject.toml
services/ws/: app.py
services/ws/app/: main.py
tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_authentication_service.py  test_customer_api.py  test_data_ingestion.py  test_device_endpoints.py  test_health.py  test_integration.py  test_mqtt_ingest.py  test_security_features.py
traefik/: acme.json  docker-compose.yml  docker-compose.yml.save  htpasswd  traefik.yml  traefik_dynamic.yml
traefik/backend/: Dockerfile  main.py  upload.php
traefik/nginx/: default.conf
(+51 files in other folders)
