[tool.poetry]
name = "smartsecurity-cloud"
version = "3.0.0"
description = "SmartSecurity Cloud IoT Platform"
authors = ["Indus Team <team@indus.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlmodel = "^0.0.24"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
redis = {extras = ["hiredis"], version = "^6.2.0"}
aiomqtt = "^2.4.0"
slowapi = "^0.1.9"
prometheus-fastapi-instrumentator = "^6.1.0"
pyotp = "^2.9.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
PyJWT = "^2.10.1"
websocket-client = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
ruff = "^0.12.3"
mypy = "^1.9.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "ARG", "SIM", "TCH", "TID", "Q"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
