[tool.poetry]
name = "auth-api"
version = "0.1.0"
description = "Authentication API"
authors = ["SmartSecurity Solutions <dev@smartsecurity.solutions>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlmodel = "^0.0.8"
sqlalchemy = "^2.0.23"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.0.3"
slowapi = "^0.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
