[tool.poetry]
name = "auth-api"
version = "0.1.0"
description = "Authentication micro-service"
authors = ["IndusSSS <admin@smartsecurity.solutions>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
"uvicorn[standard]" = "^0.29"
python-jose = {extras = ["cryptography"], version="^3.3"}
"passlib[bcrypt]" = "^1.7"
sqlmodel = "^0.0.8"
"pydantic[email]" = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
