[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API Gateway"
authors = ["SmartSecurity Solutions <dev@smartsecurity.solutions>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
httpx = "^0.25.0"
redis = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
